# AACS

./: CMakeLists.txt  README.md
AAClient/include/: backward.hpp
AAServer/: CMakeLists.txt  main.cpp
AAServer/include/: InputChannelHandler.h  InputSender.h  Uhid.h  VidCapture.h  VideoChannelHandler.h
AAServer/src/: AaCommunicator.cpp  ChannelHandler.cpp  Gadget.cpp  InputChannelHandler.cpp  InputSender.cpp  ModeSwitcher.cpp  Uhid.cpp  VidCapture.cpp  VideoChannelHandler.cpp
include/: utils.h
src/: utils.cpp
